--- a/src/index.css
+++ b/src/index.css
@@ -1,48 +1,51 @@
-/* All */
+/* general */
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;400&display=swap');
 
 /* NavBrand */
 @import url('https://fonts.googleapis.com/css2?family=Ceviche+One&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Chakra Petch', sans-serif;
+/* All */
+* {
+	margin: 0;
+	padding: 0;
+	font-family: 'Chakra Petch', sans-serif;
 }
 
-body{
-    background: #f0f0f0;
+body {
+	background: #f0f0f0;
 }
 
-.page{
-    position: absolute;
-    /* top: 100px; */
-    left: 0;
-    right: 0;
+.page {
+	position: absolute;
+	/* top: 100px; */
+	left: 0;
+	right: 0;
 }
 
-/* EFECTOS PARA CSSTRANSITION*/
+/* == EFECTOS PARA CSSTRANSITION == */
 .fade-appear,
 .fade-enter {
-    opacity: 0;
-    z-index: 1;
+	opacity: 0;
+	z-index: 1;
 }
 
-.fade-appear-active, 
-.fade-enter.fade-enter-active{
-    opacity: 1;
-    transition: opacity 200ms linear 100ms;
+.fade-appear-active,
+.fade-enter.fade-enter-active {
+	opacity: 1;
+	transition: opacity 200ms linear 100ms;
 }
 
 .fade-exit {
-    opacity: 1;
+	opacity: 1;
 }
 
 .fade-exit.fade-exit-active {
-    opacity: 0;
-    transition: opacity 100ms linear;
+	opacity: 0;
+	transition: opacity 100ms linear;
 }
 
-ul{
-    list-style-type: none;
+ul {
+	list-style-type: none;
 }
+
+/* == FIN EFECTOS PARA CSSTRANSITION == */
